js/js.translator/testData/incremental/invalidation/gettersAndSettersInlining/lib1/l1.3.kt
open class Parent(open var objectName: String) {
    open val isValid = true
}
